--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
 name = "tls-listener"
+description = "wrap incoming Stream of connections in TLS"
 version = "0.1.0"
 authors = ["Thayne McCombs <astrothayne@gmail.com>"]
 repository = "https://github.com/tmccombs/tls-listener"
 edition = "2018"
+license = "Apache-2.0"
+license-file = "LICENSE"
 
 [dependencies]
 futures = "0.1.25"
