Add clippy and fmt components to rustup

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ branches:
 notifications:
   email:
     on_success: never
+before_script:
+  - rustup component add clippy fmt
 script:
   - cargo build --verbose --examples
   - cargo test --verbose
