--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,11 +8,13 @@ on:
   pull_request:
 
 jobs:
-  build: 
+  build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         rust: [stable, beta, nightly]
+        features:
+          - hyper-h1,hyper-h2
     continue-on-error: ${{ matrix.rust == 'nightly' }}
     steps:
       - uses: actions/checkout@v2
@@ -23,10 +25,10 @@ jobs:
           profile: minimal
           components: rustfmt, clippy
       - name: Build
-        run: cargo build --verbose --examples
+        run: cargo build --verbose --examples --features ${{ matrix.features }}
       - name: Test
         run: cargo test --verbose
       - name: Lint
-        run: cargo clippy --examples
+        run: cargo clippy --examples --features ${{ matrix.features }}
       - name: Format check
         run: cargo fmt -- --check
