--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,18 +6,41 @@ authors = ["Thayne McCombs <astrothayne@gmail.com>"]
 repository = "https://github.com/tmccombs/tls-listener"
 edition = "2018"
 license = "Apache-2.0"
-license-file = "LICENSE"
 
-[badges]
-travis-ci = { repository = "tmccombs/tls-listener" }
+[features]
+default = ["tokio-net"]
+
+tokio-net = ["tokio/net"]
+hyper-h1 = ["hyper", "hyper/http1"]
+hyper-h2 = ["hyper", "hyper/http2"]
 
 [dependencies]
-futures = "0.1.25"
-native-tls = "0.2"
-tokio-executor = "0.1.6"
-tokio-io = "0.1.11"
-tokio-tls = "0.2.1"
+futures-util = "0.3.8"
+tokio = "1.0"
+tokio-rustls = "0.22.0"
+pin-project = "1.0.2"
+#tokio-native-tls = "0.3.0"
+
+[dependencies.hyper]
+version = "0.14.1"
+features = ["server"]
+optional = true
 
 [dev-dependencies]
-hyper = "0.12.23"
-tokio = "0.1.15"
+hyper = { version = "0.14.1", features = ["server", "http1", "tcp", "stream"] }
+tokio = { version = "1.0", features = ["rt", "macros", "net", "io-util"] }
+
+[[example]]
+name = "http"
+path = "examples/http.rs"
+required-features = ["hyper-h1"]
+
+[[example]]
+name = "echo"
+path = "examples/echo.rs"
+required-features = ["tokio-net"]
+
+[[example]]
+name = "http-low-level"
+path = "examples/http-low-level.rs"
+required-features = ["hyper-h1"]
