Add documentation and new example for error handling
To help explain how to avoid shutting down a server if a tls error is
encountered.

Relates to #3

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,11 @@ path = "examples/http.rs"
 required-features = ["hyper-h1"]
 
 [[example]]
+name = "http-stream"
+path = "examples/http-stream.rs"
+required-features = ["hyper-h1"]
+
+[[example]]
 name = "echo"
 path = "examples/echo.rs"
 required-features = ["tokio-net"]
