--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ hyper-h2 = ["hyper", "hyper/http2"]
 futures-util = "0.3.8"
 tokio = "1.0"
 tokio-rustls = "0.23.0"
-pin-project = "1.0.2"
+pin-project-lite = "0.2.8"
 #tokio-native-tls = "0.3.0"
 
 [dependencies.hyper]
