--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ jobs:
     strategy:
       matrix:
         rust: [stable, beta, nightly]
+        tls: [rustls, native-tls]
         features:
           - hyper-h1,hyper-h2
     continue-on-error: ${{ matrix.rust == 'nightly' }}
@@ -25,10 +26,10 @@ jobs:
           profile: minimal
           components: rustfmt, clippy
       - name: Build
-        run: cargo build --verbose --examples --features ${{ matrix.features }}
+        run: cargo build --verbose --examples --features ${{ matrix.tls }},${{ matrix.features }}
       - name: Test
-        run: cargo test --verbose
+        run: cargo test --verbose --features ${{ matrix.tls }},${{ matrix.features }}
       - name: Lint
-        run: cargo clippy --examples --features ${{ matrix.features }}
+        run: cargo clippy --examples --features ${{ matrix.tls }},${{ matrix.features }}
       - name: Format check
         run: cargo fmt -- --check
