--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "tls-listener"
 description = "wrap incoming Stream of connections in TLS"
-version = "0.3.0"
+version = "0.4.0"
 authors = ["Thayne McCombs <astrothayne@gmail.com>"]
 repository = "https://github.com/tmccombs/tls-listener"
 edition = "2018"
@@ -9,6 +9,8 @@ license = "Apache-2.0"
 
 [features]
 default = ["tokio-net"]
+rustls = ["tokio-rustls"]
+native-tls = ["tokio-native-tls"]
 
 tokio-net = ["tokio/net"]
 hyper-h1 = ["hyper", "hyper/http1"]
@@ -17,9 +19,10 @@ hyper-h2 = ["hyper", "hyper/http2"]
 [dependencies]
 futures-util = "0.3.8"
 tokio = "1.0"
-tokio-rustls = "0.23.0"
+tokio-rustls = { version = "0.23.0", optional = true }
 pin-project-lite = "0.2.8"
-#tokio-native-tls = "0.3.0"
+tokio-native-tls = { version = "0.3.0", optional = true }
+thiserror = "1.0.30"
 
 [dependencies.hyper]
 version = "0.14.1"
@@ -51,5 +54,5 @@ path = "examples/http-low-level.rs"
 required-features = ["hyper-h1"]
 
 [package.metadata.docs.rs]
-all-features = true
+features = ["rustls", "hyper-h1", "hyper-h2"]
 rustdoc-args = ["--cfg", "docsrs"]
