--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,19 +18,15 @@ hyper-h2 = ["hyper", "hyper/http2"]
 
 [dependencies]
 futures-util = "0.3.8"
-tokio = "1.0"
-tokio-rustls = { version = "0.23.0", optional = true }
+hyper = { version = "0.14.1", features = ["server", "tcp"], optional = true }
 pin-project-lite = "0.2.8"
-tokio-native-tls = { version = "0.3.0", optional = true }
 thiserror = "1.0.30"
-
-[dependencies.hyper]
-version = "0.14.1"
-features = ["server"]
-optional = true
+tokio = { version = "1.0", features = ["time"] }
+tokio-native-tls = { version = "0.3.0", optional = true }
+tokio-rustls = { version = "0.23.0", optional = true }
 
 [dev-dependencies]
-hyper = { version = "0.14.1", features = ["server", "http1", "tcp", "stream"] }
+hyper = { version = "0.14.1", features = ["http1", "stream"] }
 tokio = { version = "1.0", features = ["rt", "macros", "net", "io-util"] }
 
 [[example]]
