--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ tokio-rustls = { version = "0.23.0", optional = true }
 
 [dev-dependencies]
 hyper = { version = "0.14.1", features = ["http1", "stream"] }
-tokio = { version = "1.0", features = ["rt", "macros", "net", "io-util"] }
+tokio = { version = "1.0", features = ["rt", "macros", "net", "io-util", "signal"] }
 
 [[example]]
 name = "http"
