--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "tls-listener"
 description = "wrap incoming Stream of connections in TLS"
-version = "0.5.0"
+version = "0.5.1"
 authors = ["Thayne McCombs <astrothayne@gmail.com>"]
 repository = "https://github.com/tmccombs/tls-listener"
 edition = "2018"
@@ -11,6 +11,7 @@ license = "Apache-2.0"
 default = ["tokio-net"]
 rustls = ["tokio-rustls"]
 native-tls = ["tokio-native-tls"]
+openssl = ["tokio-openssl", "openssl_impl"]
 rt = ["tokio/rt"]
 
 tokio-net = ["tokio/net"]
@@ -25,6 +26,8 @@ thiserror = "1.0.30"
 tokio = { version = "1.0", features = ["time"] }
 tokio-native-tls = { version = "0.3.0", optional = true }
 tokio-rustls = { version = "0.23.0", optional = true }
+tokio-openssl = { version = "0.6.3", optional = true }
+openssl_impl = { package = "openssl", version = "0.10.32", optional = true }
 
 [dev-dependencies]
 hyper = { version = "0.14.1", features = ["http1", "stream"] }
@@ -56,5 +59,5 @@ path = "examples/http-low-level.rs"
 required-features = ["hyper-h1"]
 
 [package.metadata.docs.rs]
-features = ["rustls", "native-tls", "hyper-h1", "hyper-h2"]
+features = ["rustls", "native-tls", "openssl", "hyper-h1", "hyper-h2", "rt"]
 rustdoc-args = ["--cfg", "docsrs"]
