--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "tls-listener"
 description = "wrap incoming Stream of connections in TLS"
-version = "0.5.1"
+version = "0.5.1+alpha"
 authors = ["Thayne McCombs <astrothayne@gmail.com>"]
 repository = "https://github.com/tmccombs/tls-listener"
 edition = "2018"
@@ -20,7 +20,8 @@ hyper-h2 = ["hyper", "hyper/http2"]
 
 [dependencies]
 futures-util = "0.3.8"
-hyper = { version = "0.14.1", features = ["server", "tcp"], optional = true }
+#hyper = { version = "0.14.1", features = ["server", "tcp"], optional = true }
+hyper = { version = "0.14.20", features = ["server", "tcp"], optional = true }
 pin-project-lite = "0.2.8"
 thiserror = "1.0.30"
 tokio = { version = "1.0", features = ["time"] }
@@ -30,7 +31,8 @@ tokio-openssl = { version = "0.6.3", optional = true }
 openssl_impl = { package = "openssl", version = "0.10.32", optional = true }
 
 [dev-dependencies]
-hyper = { version = "0.14.1", features = ["http1", "stream"] }
+#hyper = { version = "0.14.1", features = ["http1", "stream"] }
+hyper = { version = "0.14.20", features = ["http1", "stream"] }
 tokio = { version = "1.0", features = ["rt", "macros", "net", "io-util", "signal"] }
 
 [[example]]
