--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ tokio-openssl = { version = "0.6.3", optional = true }
 openssl_impl = { package = "openssl", version = "0.10.32", optional = true }
 
 [dev-dependencies]
+axum = "0.8.1"
 hyper = { version = "1.0", features = ["http1", "server"] }
 hyper-util = { version = "0.1.1", features = ["tokio"] }
 tokio = { version = "1.0", features = [
