--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ rustls = ["rustls-aws-lc", "tokio-rustls/default"]
 native-tls = ["tokio-native-tls"]
 openssl = ["tokio-openssl", "openssl_impl"]
 rt = ["tokio/rt"]
+axum = ["dep:axum", "tracing"]
 
 tokio-net = ["tokio/net"]
 
@@ -29,6 +30,16 @@ tokio-native-tls = { version = "0.3.0", optional = true }
 tokio-rustls = { version = "0.26.1", default-features = false, optional = true }
 tokio-openssl = { version = "0.6.3", optional = true }
 openssl_impl = { package = "openssl", version = "0.10.32", optional = true }
+tracing = { version = "0.1.41", optional = true }
+
+[dependencies.axum]
+version = "0.8.1"
+optional = true
+default-features = false
+# http2 would work instead of http1, but we need one of them in order to get
+# the serve mod.
+features = ["tokio", "http1"]
+
 
 [dev-dependencies]
 axum = "0.8.1"
@@ -63,6 +74,11 @@ required-features = ["tokio-net", "rt", "tokio/rt-multi-thread"]
 [[example]]
 name = "http-change-certificate"
 path = "examples/http-change-certificate.rs"
+
+[[example]]
+name = "axum"
+path = "examples/axum.rs"
+required-features = ["axum"]
 
 [package.metadata.docs.rs]
 features = [
