--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,9 @@ description = "wrap incoming Stream of connections in TLS"
 version = "0.11.1"
 authors = ["Thayne McCombs <astrothayne@gmail.com>"]
 repository = "https://github.com/tmccombs/tls-listener"
-edition = "2021"
+edition = "2024"
 license = "Apache-2.0"
+rust-version = "1.85"
 
 [features]
 default = ["tokio-net"]
