--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,17 +1,17 @@
 name: CI
 on:
   push:
-    branches:
-      - main
+    branches: ["**"]
     paths-ignore:
       - '*.md'
   pull_request:
 
 jobs:
   build-full:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        os: [ubuntu-latest, windows-latest]
         rust: [stable, beta, nightly]
     continue-on-error: ${{ matrix.rust == 'nightly' }}
     steps:
@@ -20,6 +20,11 @@ jobs:
         run: |
           rustup toolchain install ${{ matrix.rust }} --profile minimal --component clippy,rustfmt
           rustup default ${{ matrix.rust }}
+      - name: Install OpenSSL on Windows
+        if: runner.os == 'Windows'
+        run: |
+          vcpkg integrate install
+          vcpkg.exe install openssl:x64-windows-static-md
       - name: Build
         run: cargo build --verbose --examples --all-features
       - name: Test
