feat(build): Add cooldown to dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,7 +9,16 @@ updates:
     directory: "/"
     schedule:
       interval: "monthly"
+    cooldown:
+      default-days: 7
+    groups:
+      bump:
+        applies-to: "version-updates"
+      security:
+        applies-to: "security-updates"
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
       interval: "monthly"
+    cooldown:
+      default-days: 7
