build: Fix gh release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,5 +46,7 @@ jobs:
       - name: Create release
         run: |
           gh release create --notes-file release.md "v${VERSION}"
+        env:
+          GH_TOKEN: ${{ github.token }}
 
 
